<resources>
    <string name="app_name">Погода в кармане</string>
    <string name="slogan">Shot on IPhone</string>
    <string name="min_temp">min temp:</string>
    <string name="max_temp">max temp:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="direction">Direction:</string>
    <string name="sunset">Sunset:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="clouds">Clouds:</string>
    <string name="loading">Loading…</string>
    <string name="query_city">Find the city</string>
    <string name="extensions">Extensions</string>
    <string name="message_location_deny">Доступ к локации запрещён</string>
</resources>
