<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_sunset"
    tools:context=".ui.fragment.MainFragment">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_city"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_search_city"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/search"
                android:background="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"/>

            <TextView
                android:id="@+id/tv_calendar"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_city" />

            <ImageView
                android:id="@+id/iv_description"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_calendar" />

            <TextView
                android:id="@+id/tv_temperature"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="90sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_description" />

            <TextView
                android:id="@+id/tv_min_temp"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <TextView
                android:id="@+id/tv_max_temp"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_min_temp" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_max_temp" />

            <ImageView
                android:id="@+id/iv_wind"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/teal_200"
                android:src="@drawable/wind"
                app:layout_constraintEnd_toStartOf="@+id/iv_humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/teal_200"
                android:src="@drawable/humidity"
                app:layout_constraintEnd_toStartOf="@+id/iv_pressure"
                app:layout_constraintStart_toEndOf="@+id/iv_wind"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <ImageView
                android:id="@+id/iv_pressure"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/teal_200"
                android:src="@drawable/pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_humidity"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_wind"
                app:layout_constraintStart_toStartOf="@+id/iv_wind"
                app:layout_constraintTop_toBottomOf="@+id/iv_wind" />

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_humidity"
                app:layout_constraintStart_toStartOf="@+id/iv_humidity"
                app:layout_constraintTop_toBottomOf="@+id/iv_wind" />

            <TextView
                android:id="@+id/tv_pressure"
                style="@style/TextStyle.TextStyleForTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_pressure"
                app:layout_constraintStart_toStartOf="@+id/iv_pressure"
                app:layout_constraintTop_toBottomOf="@+id/iv_wind" />

            <TextView
                android:id="@+id/tv_wind_result"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_wind"
                app:layout_constraintStart_toStartOf="@+id/tv_wind"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

            <TextView
                android:id="@+id/tv_humidity_result"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
                app:layout_constraintStart_toStartOf="@+id/tv_humidity"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

            <TextView
                android:id="@+id/tv_pressure_result"
                style="@style/TextStyle.ExtensionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_pressure"
                app:layout_constraintStart_toStartOf="@+id/tv_pressure"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/extensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:alpha=".4"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity_result">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_clouds"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds"
                        app:layout_constraintEnd_toStartOf="@+id/tv_clouds_result"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_clouds_result"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_clouds"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        app:layout_constraintEnd_toStartOf="@+id/tv_sunrise_result"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_clouds" />

                    <TextView
                        android:id="@+id/tv_sunrise_result"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_sunrise"
                        app:layout_constraintTop_toBottomOf="@id/tv_clouds" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        app:layout_constraintEnd_toStartOf="@+id/tv_sunset_result"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sunrise" />

                    <TextView
                        android:id="@+id/tv_sunset_result"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_sunset"
                        app:layout_constraintTop_toBottomOf="@id/tv_sunrise" />

                    <TextView
                        android:id="@+id/tv_direction"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direction"
                        app:layout_constraintEnd_toStartOf="@+id/tv_direction_result"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sunset" />

                    <TextView
                        android:id="@+id/tv_direction_result"
                        style="@style/TextStyle.TextStyleForTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_direction"
                        app:layout_constraintTop_toBottomOf="@id/tv_sunset" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
